Mohammad Ayaz Web Dev 2

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#portfolio" class="navbar-link" data-nav-link>Portfolio</a>
+            <a href="#portfolio" class="navbar-link" data-nav-link>My Recent Work</a>
           </li>
 
           <li class="navbar-item">
