Mohammad Ayaz Web Dev 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Mohammad Ayaz</title>
   <meta name="title" content="Mohammad Ayaz website">
   <meta name="description" content="This is my photography portfolio website made with html,css,javascript and is completely responsive.">
-  <meta name="keywords" content="theycallmeAyaz, Mohammad Ayaz Warsi, Mohammad, portfolio, personal portfolio, portfolio design, portfolio website">
+  <meta name="keywords" content="SnapshotAyaz,snapshots,snapshotayaz,theycallmeAyaz, Mohammad Ayaz Warsi, Mohammad, portfolio, personal portfolio, portfolio design, portfolio website">
   
   <!--favicon of website-->
   <link rel="shortcut icon" href="./MYFAVICON.svg" type="image/svg+xml">
